# tienda_prueba_tecnica

./: README.md
backend/: compose.yml  install_mssql.sh  pyproject.toml
backend/.envs/: .env.local  .env.postgres
backend/src/: db.sqlite3  sudo
backend/src/core/: urls.py
backend/src/core/settings/: __init__.py  base.py
backend/src/health/: urls.py  views.py
backend/src/shop/: models.py  serializers.py  urls.py  views.py
backend/src/shop/migrations/: 0001_initial.py
backend/src/utils/: environment.py  logger.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: CreateDialog.js  UpdateDialog.js
frontend/src/components/products/: List.js
